--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -1,15 +1,23 @@
-// @import '.';
-@import './fonts/Montserrat-All.scss';
+// font-family: 'Roboto', sans-serif;
 
-@import './fonts/Montserrat-Light.scss';
-@import './fonts/Montserrat-Regular.scss';
-@import './fonts/Montserrat-Medium.scss';
-@import './fonts/Montserrat-SemiBold.scss';
-@import './fonts/Montserrat-Bold.scss';
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto-Medium.ttf');
+  src: local('Roboto Medium'), local('Roboto-Medium'),
+    url('../fonts/Roboto-Medium.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Roboto-Medium.woff') format('woff'),
+    url('../fonts/Roboto-Medium.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
 
-@import './fonts/Roboto-All.scss';
-
-@import './fonts/Roboto-Light.scss';
-@import './fonts/Roboto-Regular.scss';
-@import './fonts/Roboto-Medium.scss';
-@import './fonts/Roboto-Bold.scss';
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto-Medium.ttf');
+  src: local('Roboto Medium'), local('Roboto-Medium'),
+    url('../fonts/Roboto-Medium.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Roboto-Medium.woff') format('woff'),
+    url('../fonts/Roboto-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
