--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,5 @@
+@import '~node_modules/modern-normalize/modern-normalize.css';
+// @import '.';
 @import './utils/module';
 
 @import './base/module';
@@ -5,3 +7,5 @@
 @import './components/module';
 
 @import './layouts/module';
+
+@import './pages/main/module';
